<resources>
    <string name="app_name">BoostIt</string>
    <string name="log_out_coach">LOG OUT COACH</string>
    <string name="create_new_workout">Create new workout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="log_out">Log Out</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="seperate">------------</string>
    <string name="logout">Logout</string>
    <string name="title_activity_asdasd">asdasd</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_my_workouts">My Workouts</string>
    <string name="menu_choose_workout">Choose Workout</string>
    <string name="menu_workouts_history">Workouts History</string>
    <string name="messeages">Messages</string>
    <string name="menu_messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="title_activity_trainee_home">TraineeHome</string>
    <string name="menu_new_workouot">New Workout</string>
    <string name="menu_profile">Profile</string>
    <string name="title_activity_coach_home">CoachHome</string>
    <string name="menu_coach_workout_history">Workout History</string>
    <string name="menu_coach_my_workouts">My Workouts</string>
    <string name="menu_coach_new_workout">New Workout</string>
    <string name="menu_coach_profile">Profile</string>
    <string name="menu_coach_logout">Log out</string>
</resources>
