<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_coach_my_workouts"
            android:icon="@drawable/ic_date"
            android:title="@string/menu_my_workouts" />
        <item
            android:id="@+id/nav_coach_choose_workout"
            android:icon="@drawable/ic_new"
            android:title="@string/menu_choose_workout" />
        <item
            android:id="@+id/nav_coach_workouts_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_workouts_history" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_coach_profile"
                android:icon="@drawable/ic_account"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_coach_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
