<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_trainee_my_workouts">

    <fragment
        android:id="@+id/nav_trainee_my_workouts"
        android:name="com.example.boostit.UITrainee.myworkouts.MyWorkoutsFragment"
        android:label="@string/menu_my_workouts"
        tools:layout="@layout/fragment_trainee_my_workouts" />

    <fragment
        android:id="@+id/nav_trainee_choose_workout"
        android:name="com.example.boostit.UITrainee.choose_workout.ChooseWorkoutFragment"
        android:label="@string/menu_choose_workout"
        tools:layout="@layout/fragment_trainee_choose_workout" />

    <fragment
        android:id="@+id/nav_trainee_workouts_history"
        android:name="com.example.boostit.UITrainee.workout_history.WorkoutHistoryFragment"
        android:label="@string/menu_workouts_history"
        tools:layout="@layout/fragment_trainee_workout_history" />

    <fragment
        android:id="@+id/nav_trainee_profile"
        android:name="com.example.boostit.UITrainee.profile.SendFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_trainee_profile" />

</navigation>