<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_coach_my_workouts">

    <fragment
        android:id="@+id/nav_coach_my_workouts"
        android:name="com.example.boostit.ui.coach_my_workouts.CoachMyWorkoutsFragment"
        android:label="@string/menu_coach_my_workouts"
        tools:layout="@layout/fragment_coach_my_workouts" />

    <fragment
        android:id="@+id/nav_coach_new_workout"
        android:name="com.example.boostit.ui.coach_new_workout.CoachNewWorkoutFragment"
        android:label="@string/menu_coach_new_workout"
        tools:layout="@layout/fragment_coach_new_workout" />

    <fragment
        android:id="@+id/nav_coach_workout_history"
        android:name="com.example.boostit.ui.coach_workout_history.CoachWorkoutHistoryFragment"
        android:label="@string/menu_coach_workout_history"
        tools:layout="@layout/fragment_coach_workout_history" />

    <fragment
        android:id="@+id/nav_coach_profile"
        android:name="com.example.boostit.ui.coach_profile.CoachProfileFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_coach_profile" />

</navigation>