<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_my_workouts">

    <fragment
        android:id="@+id/nav_my_workouts"
        android:name="com.example.boostit.ui.myworkouts.MyWorkoutsFragment"
        android:label="@string/menu_my_workouts"
        tools:layout="@layout/fragment_my_workouts" />

    <fragment
        android:id="@+id/nav_new_workout"
        android:name="com.example.boostit.ui.new_workout.NewWorkoutFragment"
        android:label="@string/menu_new_workout"
        tools:layout="@layout/fragment_new_workout" />

    <fragment
        android:id="@+id/nav_workouts_history"
        android:name="com.example.boostit.ui.workouts_history.WorkoutsHistoryFragment"
        android:label="@string/menu_workouts_history"
        tools:layout="@layout/fragment_workouts_history" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.boostit.ui.profile.ProfileFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_profile" />

</navigation>